# process_image

./: .gitignore  CMakeLists.txt  commands.md  project_architect.md  setup.sh
client/: app.py  requirements.txt
config/: pipeline.yaml
docs/: api-reference.md  examples.md  setup.md  video-analytics-service.md
docs/implementation-details/: phase-0-scaffolding.md  phase-1-frame-source.md  phase-10-cpu-fallback.md  phase-11-error-handling.md  phase-13-bbox-logging.md  phase-2-gpu-memory-preprocessing.md  phase-3-triton-yolo.md  phase-4-postprocess.md  phase-5-arcface.md  phase-6-db-matcher.md  phase-7-pipeline-cli.md  phase-8-metrics.md  phase-9-enrollment.md
docs/superpowers/specs/: 2026-05-02-face-detection-recognition-pipeline-design.md
proto/: analytics.proto
src/: main.cpp  service_main.cpp
src/frame_source/: ffmpeg_source.cpp  ffmpeg_source.h  frame_source.h  nvdec_source.cu  nvdec_source.h  prefetch_source.cpp  prefetch_source.h
src/gpu/: cpu_memory_pool.cpp  cpu_memory_pool.h  cpu_preprocessor.cpp  cpu_preprocessor.h  memory_pool.cu  memory_pool.h  preprocessor.cu  preprocessor.h
src/inference/: face_detector.cpp  face_detector.h  face_recognizer.cpp  face_recognizer.h  triton_client.cpp  triton_client.h
src/matching/: cpu_face_matcher.cpp  cpu_face_matcher.h  face_database.cpp  face_database.h  face_matcher.cpp  face_matcher.h
src/metrics/: frame_metrics.h  metrics_logger.cpp  metrics_logger.h  ring_buffer.h
src/output/: console_result_writer.cpp  console_result_writer.h  csv_result_writer.cpp  csv_result_writer.h  result_writer.h  webhook_result_writer.cpp  webhook_result_writer.h
src/pipeline/: pipeline.cpp  pipeline.h  result_handler.cpp  result_handler.h
src/postprocess/: face_cropper.cu  face_cropper.h  nms.cpp  nms.h
src/service/: grpc_server.cpp  grpc_server.h  pipeline_session.cpp  pipeline_session.h  session_manager.cpp  session_manager.h  shared_resources.cpp  shared_resources.h
src/utils/: config.h  timer.h
tests/: test_cpu_preprocessor.cpp  test_face_database.cpp  test_face_matcher.cpp  test_frame_source.cpp  test_nms.cpp  test_triton_client.cpp
tools/: download_models.py  draw_bboxes.py  enroll_faces.py  requirements.txt
